--- a/app/src/main/res/layout/story_item.xml
+++ b/app/src/main/res/layout/story_item.xml
@@ -14,11 +14,12 @@
             android:id="@+id/img_avatar"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            tools:src="@tools:sample/avatars"
             android:scaleType="centerCrop"
+            android:contentDescription="@string/image_avatar_content_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@tools:sample/avatars" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_name"
