animation on creat post page views, setting page views, cleared unused import, unused variable

--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -12,6 +12,8 @@
         android:layout_height="200dp"
         app:cardCornerRadius="50pt"
         app:cardElevation="0dp"
+        android:alpha="0"
+        tools:alpha="1"
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toTopOf="@+id/tv_name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,6 +36,8 @@
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:alpha="0"
+        tools:alpha="1"
         android:layout_marginVertical="15dp"
         app:layout_constraintBottom_toTopOf="@+id/cv_language_setting"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,6 +51,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="0dp"
+        android:alpha="0"
+        tools:alpha="1"
         app:layout_constraintBottom_toTopOf="@+id/cv_logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -84,6 +90,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="0dp"
+        android:alpha="0"
+        tools:alpha="1"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
