--- a/app/src/main/res/layout-land/fragment_add_story.xml
+++ b/app/src/main/res/layout-land/fragment_add_story.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingVertical="10dp"
     tools:context=".view.fragment.AddStoryFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_avatar"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         app:cardCornerRadius="10pt"
         app:cardElevation="0dp"
-        android:alpha="0"
-        tools:alpha="1"
         android:contentDescription="@string/card_view_avatar_content_description"
         app:layout_constraintBottom_toTopOf="@+id/ll_upload_buttons"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,8 +48,6 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
             android:text="@string/upload_from_camera"
-            android:alpha="0"
-            tools:alpha="1"
             android:textAllCaps="false"
             android:contentDescription="@string/btn_camera_upload_content_description"/>
 
@@ -59,8 +56,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/upload_from_gallery"
-            android:alpha="0"
-            tools:alpha="1"
             android:textAllCaps="false"
             android:contentDescription="@string/btn_gallery_upload_content_description"/>
 
@@ -69,12 +64,10 @@
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/et_description"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         android:layout_marginHorizontal="25dp"
         android:background="@drawable/edit_text_bg"
         android:gravity="start"
-        android:alpha="0"
-        tools:alpha="1"
         android:hint="@string/et_description_post_content_description"
         app:layout_constraintBottom_toTopOf="@+id/btn_post_story"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,8 +82,6 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="25dp"
         android:text="@string/upload_button"
-        android:alpha="0"
-        tools:alpha="1"
         android:textAllCaps="false"
         android:contentDescription="@string/btn_upload_content_description"
         app:layout_constraintBottom_toBottomOf="parent"
