--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,3 @@
-
 <resources>
     <color name="seed">#002f20</color>
     <color name="md_theme_light_primary">#006C4E</color>
@@ -62,4 +61,9 @@
     <color name="md_theme_dark_outlineVariant">#404944</color>
     <color name="md_theme_dark_scrim">#000000</color>
     <color name="black">#000000</color>
+    <color name="light_blue_50">#FFE1F5FE</color>
+    <color name="light_blue_200">#FF81D4FA</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
+    <color name="white">#FFFFFFFF</color>
 </resources>
