google maps and maps activity added

--- a/app/src/main/res/menu/story_menu.xml
+++ b/app/src/main/res/menu/story_menu.xml
@@ -2,9 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item android:id="@+id/location"
+        android:icon="@drawable/baseline_location"
+        android:title="@string/menu_location"
+        app:showAsAction="ifRoom"/>
     <item android:id="@+id/setting"
         android:icon="@drawable/baseline_settings"
         android:title="@string/menu_setting"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
+
 
 </menu>
