--- a/app/src/main/res/layout-land/fragment_add_story.xml
+++ b/app/src/main/res/layout-land/fragment_add_story.xml
@@ -11,23 +11,22 @@
         android:id="@+id/cv_avatar"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:contentDescription="@string/card_view_avatar_content_description"
         app:cardCornerRadius="10pt"
         app:cardElevation="0dp"
-        android:contentDescription="@string/card_view_avatar_content_description"
         app:layout_constraintBottom_toTopOf="@+id/ll_upload_buttons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="spread">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img_preview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:contentDescription="@string/image_avatar_content_description"
             android:scaleType="centerCrop"
-            android:src="@drawable/placeholder"
-            android:contentDescription="@string/image_avatar_content_description"/>
+            android:src="@drawable/placeholder" />
     </androidx.cardview.widget.CardView>
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -47,17 +46,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
+            android:contentDescription="@string/btn_camera_upload_content_description"
             android:text="@string/upload_from_camera"
-            android:textAllCaps="false"
-            android:contentDescription="@string/btn_camera_upload_content_description"/>
+            android:textAllCaps="false" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_upload_from_gallery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/btn_gallery_upload_content_description"
             android:text="@string/upload_from_gallery"
-            android:textAllCaps="false"
-            android:contentDescription="@string/btn_gallery_upload_content_description"/>
+            android:textAllCaps="false" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -69,37 +68,62 @@
         android:background="@drawable/edit_text_bg"
         android:gravity="start"
         android:hint="@string/et_description_post_content_description"
+        app:layout_constraintBottom_toTopOf="@+id/ll_include_location"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_upload_buttons" />
+
+    <LinearLayout
+        android:id="@+id/ll_include_location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="25dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/btn_post_story"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_upload_buttons"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/et_description">
+
+        <androidx.appcompat.widget.AppCompatCheckBox
+            android:id="@+id/cb_include_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/include_location"
+            android:textSize="16sp" />
+
+    </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_post_story"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="25dp"
+        android:contentDescription="@string/btn_upload_content_description"
         android:text="@string/upload_button"
         android:textAllCaps="false"
-        android:contentDescription="@string/btn_upload_content_description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_description" />
+        app:layout_constraintTop_toBottomOf="@+id/ll_include_location" />
 
     <ProgressBar
         android:id="@+id/pb_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
