--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -99,7 +99,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cv_language_setting">
 
                 <androidx.appcompat.widget.LinearLayoutCompat
-                    android:id="@+id/ll_setting"
+                    android:id="@+id/ll_logout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -107,7 +107,7 @@
                     android:paddingHorizontal="15dp">
 
                     <TextView
-                        android:id="@+id/tv_setting"
+                        android:id="@+id/tv_logout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="15dp"
